Compiler Bouw/compiler/test/basic/stephen/fail/boolean_arithmetic.cvc
// Comparisons don't work on booleans, except for ==.

#include "civic.h"

export int main() {
    if (true > false) {}
    return 0;
}
